@@ -54,6 +54,7 @@ struct scsi_print_options
   bool sasphy, sasphy_reset;
   
   bool get_wce, get_rcd;
+  short int set_wce, set_rcd;  // disable(-1), enable(1) cache
 
   scsi_print_options()
     : drive_info(false),
@@ -71,7 +72,8 @@ struct scsi_print_options
       smart_selftest_abort(false),
       smart_selftest_force(false),
       sasphy(false), sasphy_reset(false),
-      get_wce(false), get_rcd(false)
+      get_wce(false), get_rcd(false),
+      set_wce(0), set_rcd(0)
     { }
 };
 
