@@ -89,7 +89,7 @@ static void Usage()
 "  --identify[=[w][nvb]]\n"
 "         Show words and bits from IDENTIFY DEVICE data                (ATA)\n\n"
 "  -g NAME, --get=NAME\n"
-"        Get device setting: all, aam, apm, lookahead, security, wcache\n\n"
+"        Get device setting: all, aam, apm, lookahead, security, wcache, rcache\n\n"
 "  -a, --all\n"
 "         Show all SMART information for device\n\n"
 "  -x, --xall\n"
@@ -125,7 +125,7 @@ static void Usage()
 "  -s NAME[,VALUE], --set=NAME[,VALUE]\n"
 "        Enable/disable/change device setting: aam,[N|off], apm,[N|off],\n"
 "        lookahead,[on|off], security-freeze, standby,[N|off|now],\n"
-"        wcache,[on|off]\n\n"
+"        wcache,[on|off], rcache,[on|off]\n\n"
   );
   printf(
 "======================================= READ AND DISPLAY DATA OPTIONS =====\n\n"
@@ -222,10 +222,10 @@ static std::string getvalidarglist(int opt)
   case 'f':
     return "old, brief, hex[,id|val]";
   case 'g':
-    return "aam, apm, lookahead, security, wcache";
+    return "aam, apm, lookahead, security, wcache, rcache";
   case opt_set:
     return "aam,[N|off], apm,[N|off], lookahead,[on|off], security-freeze, "
-           "standby,[N|off|now], wcache,[on|off]";
+           "standby,[N|off|now], wcache,[on|off], rcache,[on|off]";
   case 's':
     return getvalidarglist(opt_smart)+", "+getvalidarglist(opt_set);
   case opt_identify:
@@ -863,12 +863,21 @@ static const char * parse_options(int argc, char** argv,
           else if (!strcmp(name, "lookahead")) {
             if (get) {
               ataopts.get_lookahead = true;
-              scsiopts.get_rcd = true;
             }
             else if (off)
               ataopts.set_lookahead = -1;
             else if (on)
               ataopts.set_lookahead = 1;
+            else
+              badarg = true;
+          }
+          else if (!strcmp(name, "rcache")) {
+            if (get)
+              scsiopts.get_rcd = true;
+            else if (off)
+              scsiopts.set_rcd = -1;
+            else if (on)
+              scsiopts.set_rcd = 1;
             else
               badarg = true;
           }
@@ -896,10 +905,14 @@ static const char * parse_options(int argc, char** argv,
               ataopts.get_wcache = true;
               scsiopts.get_wce = true;
             }
-            else if (off)
+            else if (off) {
               ataopts.set_wcache = -1;
-            else if (on)
+              scsiopts.set_wce = -1;
+            }
+            else if (on) {
               ataopts.set_wcache = 1;
+              scsiopts.set_wce = 1;
+            }
             else
               badarg = true;
           }
